feat: add image routes
